[package]
name = "ni-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ni"
path = "src/bin/ni.rs"

[[bin]]
name = "nr"
path = "src/bin/nr.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dialoguer = "0.11.0"
console = "0.15.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
tempfile = "3.3"


